added task management feature